--- a/.gitattributes
+++ b/.gitattributes
@@ -32,6 +32,17 @@
 *.css linguist-detectable=true
 *.css linguist-documentation=false
 *.css linguist-language=CSS
+# Gosu source file
+*.gs linguist-detectable=true
+*.gs linguist-documentation=false
+*.gs linguist-language=Gosu
+*.gsx linguist-detectable=true
+*.gsx linguist-documentation=false
+*.gsx linguist-language=Gosu
+# Ren'Py source file
+*.rpy linguist-detectable=true
+*.rpy linguist-documentation=false
+*.rpy linguist-language=Ren'Py
 # Less stylesheet file
 *.less linguist-detectable=true
 *.less linguist-documentation=false
@@ -164,7 +175,7 @@
 # End of linguist script
 
 # File info
-# File type: gitattributes file (.gitattributes)
-# File version: 4 (2022, Tuesday, June 28th at 2:32 pm PST)
-# Line count (including blank lines and compiler line): 171
+# File type: gitattributes file (*.gitattributes)
+# File version: 5 (2023, Wwednesday, February 22nd at 3:00 pm PST)
+# Line count (including blank lines and compiler line): 182
 # End of script
